# sys-info

./: CMakeLists.txt  README.md  build.sh
include/: pktcap.h  proc.h
src/: main.c  main.cpp  pktcap.c  proc.cpp
